--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,8 @@
                         height="20px"
                         src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true">
                     </iframe>
+                    <script src="\{\{ site.baseurl /}/}/js/busuanzi.pure.mini.js"></script>
+	                <span id="busuanzi_container_site_pv">本站访问量<span id="busuanzi_value_site_pv"></span>次</span>
                 </p>
             </div>
         </div>
