--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -102,6 +102,7 @@
         {% endif %}
           <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
           <span class="subheading">{{ page.description }}</span>
+          <span id="busuanzi_container_page_pv">阅读量<span id="busuanzi_value_page_pv"></span>次</span>
         </div>
       </div>
     </div>
