--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,8 +15,8 @@
                         src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true">
                     </iframe>
                 </p>
-		<script src="\{\{ site.baseurl /}/}/js/busuanzi.pure.mini.js"></script>
-	        <span id="busuanzi_container_site_pv">本站访问量<span id="busuanzi_value_site_pv"></span>次</span>
+		<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+                <span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_pv"></span>次</span>
             </div>
         </div>
     </div>
