--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
                     
                 </p>    
                 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-                <span>总访问量<span id="busuanzi_value_site_pv"></span>次</span>
+                <span>访问量<span id="busuanzi_value_site_pv"></span>次</span>
             </div>
         </div>
     </div>
