--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
                     <br>
                     Powered by <a href="http://huangxuan.me">Hux Blog</a> |
                     
-                    <span>aa访问量<span id="busuanzi_value_site_uv"></span>次</span>
+                    <span>uv访问量<span id="busuanzi_value_site_uv"></span>次</span>
                 </p>    
                 
             </div>
