--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                    Powered by <a href="http://huangxuan.me">Hux Blog</a> |
+                    Powered by <a href="https://veronica-l.github.io/patronum/">Veronica Blog</a> |
                     
                     <span>本站访问量<span id="busuanzi_value_site_uv"></span>次</span>
                 </p>    
